refactor: isola contextos de Delivery e PDV com DTOs, Controllers e Core Service dedicados